# reference-models

./: README.md  meson.build  meson_options.txt
.github/: CODEOWNERS
models/: README.md  init_model_so.sh  meson.build
models/inceptionv3/: inceptionv3.vcxproj  main.c  makefile.linux  meson.build  mybuild-tizen.sh  mybuild-ubuntu.sh  vnn_inceptionv3.c  vnn_inceptionv3.h  vnn_post_process.c  vnn_post_process.h  vnn_pre_process.c  vnn_pre_process.h
models/inceptionv3/bin_r/: filter_dlopen  filter_nodlopen
models/tools/build-strap/: build_vx.sh  build_vx_my.sh  mybuild-tizen.sh  mybuild-ubuntu.sh  myrun-tizen.sh  myrun-ubuntu.sh
models/tools/gbs-build-conf/: .gbs.conf
models/tools/setup_dev/: dns.sh  ethernet.sh  init_once.sh  install_tpk.sh  proxy.sh  sshfs.sh
models/tools/setup_dev/zypp/repos.d/: tizen-base.repo  tizen-unified.repo
models/tools/setup_dev/zypper-rpms/: README.md
models/tools/unittest_dlopen/: filter_dlopen.c  filter_nodlopen.c
models/yolov3/: .cproject  .project  BUILD  hello.c  main.c  main.h  makefile.linux  meson.build  mybuild-tizen.sh  vnn_post_process.c  vnn_post_process.h  vnn_pre_process.c  vnn_pre_process.h  vnn_yolov3.c  yolov3.vcxproj
models/yolov3/bin_demo_deprecated/: yolov3
models/yolov3/bin_r/: filter_dlopen  filter_nodlopen
packaging/: reference-models.spec
